--- a/IS3-Desktop/IS3-Desktop/IS3MainWindow.xaml
+++ b/IS3-Desktop/IS3-Desktop/IS3MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:pageTransitions="clr-namespace:WpfPageTransitions;assembly=WpfPageTransitions"
-        Title="iS3 Ver.2017.5" Height="600" Width="800">
+        Title="iS3 Ver1.1 (2019.4)" Height="600" Width="800">
     <Grid x:Name="RootVisual">
         <pageTransitions:PageTransition Name="pageTransitionControl"
                                         TransitionType="Grow" />
