--- a/IS3-Desktop/IS3-Desktop/MainFrame.xaml
+++ b/IS3-Desktop/IS3-Desktop/MainFrame.xaml
@@ -11,7 +11,7 @@
     xmlns:IS3Controls="clr-namespace:iS3.Desktop.UserControls"
     xmlns:IS3Python="clr-namespace:iS3.Python;assembly=iS3.Python"
     mc:Ignorable="d" 
-    d:DesignHeight="300" d:DesignWidth="800">
+    d:DesignHeight="400" d:DesignWidth="800">
     <UserControl.Resources>
         <Style x:Key="HomeImage" TargetType="Image" >
             <Setter Property="Source" 
@@ -41,8 +41,8 @@
 
     <Grid x:Name="RootVisual">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <!--<RowDefinition Height="24" />-->
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -106,6 +106,11 @@
             </StackPanel>
         </Grid>
 
+        <Grid x:Name="MenuGrid" Grid.Row="1"
+              Background="{StaticResource BaseColor}">
+            <IS3Desktop:RibbonMenu x:Name="ribbonMenuPanel"/>
+        </Grid>
+
         <!--<StackPanel Grid.Row="1">
             <Menu x:Name="MainMenu" IsMainMenu="True">
                 <MenuItem Header="Help">
@@ -114,7 +119,7 @@
             </Menu>
         </StackPanel>-->
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="2">
             <xcad:DockingManager x:Name="DocMan"
 			AllowMixedOrientation="True"
 			BorderBrush="Black"
